# Argus---Event-Driven-Agent-Architecture

./: .gitignore  CLAUDE.md  README.md  cdk.json  pyproject.toml  trigger.py
.github/workflows/: test.yml
agents/: __init__.py  requirements.txt
agents/charset_normalizer-3.4.4.dist-info/: RECORD
agents/cryptography-46.0.5.dist-info/: RECORD
agents/ltm_writer/: handler.py
agents/parser/: __init__.py  agent.py  handler.py
agents/performance/: agent.py  handler.py
agents/pynacl-1.6.2.dist-info/: RECORD
agents/security/: __init__.py  agent.py  handler.py
agents/shared/: __init__.py  bedrock_client.py  config.py  github_client.py  models.py  transport.py
agents/style/: agent.py  handler.py
agents/summary/: agent.py  handler.py
agents/summary/templates/: finding_critical.md.j2  finding_info.md.j2  review_comment.md.j2
agents/test/: agent.py  handler.py
agents/webhook/: __init__.py  handler.py
dashboard/: index.html  package-lock.json  package.json
dashboard/api/: server.py
dashboard/src/: App.jsx  index.css
dashboard/src/components/: FindingsPanel.jsx  InfraHealth.jsx  Overview.jsx  ReviewsTable.jsx
lib/: argus.ts  cdk.json  package-lock.json  package.json  tsconfig.json
lib/stacks/: agents-stack.ts  api-stack.ts  messaging-stack.ts  storage-stack.ts
tests/: conftest.py
tests/fixtures/: github_files.json  pr_webhook_event.json
tests/unit/: test_bedrock_client.py  test_github_client.py  test_models.py  test_parser_agent.py  test_security_agent.py  test_transport.py  test_webhook_handler.py
