[tool.poetry]
name = "argus"
version = "0.1.0"
description = "Distributed multi-agent AI code review platform"
authors = ["Srinivasa Rithik Ghantasala"]
readme = "README.md"
packages = [
    { include = "agents" },
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6"
boto3 = "^1.34"
PyGithub = "^2.2"
unidiff = "^0.7"
cryptography = "^42.0"
PyJWT = "^2.8"
Jinja2 = "^3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.1"
moto = {version = "^5.0", extras = ["sns", "sqs", "dynamodb", "secretsmanager"]}
ruff = "^0.3"
black = "^24.2"
mypy = "^1.8"
boto3-stubs = {version = "^1.34", extras = ["sns", "sqs", "dynamodb", "secretsmanager"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = '''
/(
  agents/annotated_types
  | agents/certifi
  | agents/cffi
  | agents/charset_normalizer
  | agents/cryptography
  | agents/github
  | agents/idna
  | agents/jwt
  | agents/nacl
  | agents/pycparser
  | agents/pydantic
  | agents/pydantic_core
  | agents/requests
  | agents/typing_extensions\.py
  | agents/typing_inspection
  | agents/urllib3
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["agents/annotated_types", "agents/certifi", "agents/cffi", "agents/charset_normalizer", "agents/cryptography", "agents/github", "agents/idna", "agents/jwt", "agents/nacl", "agents/pycparser", "agents/pydantic", "agents/pydantic_core", "agents/requests", "agents/typing_extensions.py", "agents/typing_inspection", "agents/urllib3"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["agents"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ['^agents/(annotated_types|certifi|cffi|charset_normalizer|cryptography|github|idna|jwt|nacl|pycparser|pydantic|pydantic_core|requests|typing_extensions\.py|typing_inspection|urllib3)/']

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "agents"]
